GUI-1478: Fix alignment of "add tile" on instance volumes page, volume snapshots page, and scaling group policies page

--- a/eucaconsole/static/css/pages/keypairs.css
+++ b/eucaconsole/static/css/pages/keypairs.css
@@ -27,7 +27,7 @@
 .tile.add { text-align: center; text-transform: uppercase; position: relative; }
 .tile.add a { display: block; position: absolute; top: 0; bottom: 0; left: 0; right: 0; }
 .tile.add a:hover { background-color: #d3e9b6; }
-.tile.add .plus { font-size: 5rem; margin-bottom: 0.5rem; }
+.tile.add .plus { font-size: 5rem; margin-bottom: -1rem; }
 .tile .header { position: relative; height: 24px; }
 .tile .header a { overflow: hidden; white-space: nowrap; text-overflow: ellipsis; display: block; padding: 6px 30px 4px 10px; color: #03405f; font-weight: bold; }
 .tile .header a:hover { color: #8cc63e; }
