--- a/eucaconsole/static/sass/includes/_landingpage.scss
+++ b/eucaconsole/static/sass/includes/_landingpage.scss
@@ -142,7 +142,7 @@ $dropdown-border-color: $euca-green;
         }
         .plus {
             font-size: 5rem;
-            margin-bottom: 0.5rem;
+            margin-bottom: -1rem;
         }
     }
     .header {
